--- a/package/translate/pt.po
+++ b/package/translate/pt.po
@@ -2,38 +2,39 @@
 # Copyright (C) Kpple 2020
 # This file is distributed under the same license as the Kpple Menu package.
 #
-#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: KppleMenu \n"
+"Project-Id-Version: KppleMenu\n"
 "Report-Msgid-Bugs-To: https://github.com/kppleos/org.kpple.kppleMenu\n"
 "POT-Creation-Date: 2020-05-19\n"
-"PO-Revision-Date: 2020-05-20\n"
-"Last-Translator: Borgniet Rudy <borgniet.rudy@hotmail.com>\n"
+"PO-Revision-Date: 2021-01-06 11:29+0000\n"
+"Last-Translator: Hugo Carvalho <hugokarvalho@hotmail.com>\n"
 "Language: pt\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"Language-Team: \n"
+"X-Generator: Poedit 2.4.2\n"
 
 #: ../contents/ui/main.qml
 msgid "About This Computer"
-msgstr "Sobre este computador" 
+msgstr "Acerca deste computador"
 
 #: ../contents/ui/main.qml
 msgid "System Preferences..."
-msgstr "Preferências do Sistema..." 
+msgstr "Preferências do Sistema..."
 
 #: ../contents/ui/main.qml
 msgid "App Store..."
-msgstr "Loja de aplicativos..." 
+msgstr "Loja de Aplicações..."
 
 #: ../contents/ui/main.qml
 msgid "Force Quit..."
-msgstr "Forçar Encerramento..." 
+msgstr "Forçar Encerramento..."
 
 #: ../contents/ui/main.qml
 msgid "Sleep"
-msgstr "Repouso"
+msgstr "Hibernar"
 
 #: ../contents/ui/main.qml
 msgid "Restart..."
@@ -41,15 +42,15 @@ msgstr "Reiniciar..."
 
 #: ../contents/ui/main.qml
 msgid "Shut Down..."
-msgstr "Desligar..."
+msgstr "Encerrar..."
 
 #: ../contents/ui/main.qml
 msgid "Lock Screen"
-msgstr "Bloquear"
+msgstr "Bloquear Ecrã"
 
 #: ../contents/ui/main.qml
 msgid "Log Out"
-msgstr "Sair"
+msgstr "Terminar Sessão"
 
 #: ../contents/config/config.qml
 msgid "Advanced"
@@ -61,11 +62,11 @@ msgstr "Ajuda"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Adapt the links with your own command lines"
-msgstr "Adapte links com suas próprias linhas de comando"
+msgstr "Adapte as ligações com as suas próprias linhas de comando"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "( Warning : This is the expert mode, do not change anything if the application is working properly. )"
-msgstr "( Aviso : Este é o modo especialista, não altere nada se o aplicativo estiver funcionando corretamente. )"
+msgstr "( Aviso : Este é o modo avançado, não altere nada se a aplicação estiver a funcionar corretamente. )"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Show advanced mode"
@@ -73,23 +74,23 @@ msgstr "Mostrar modo avançado"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "About This Computer :"
-msgstr "Sobre este computador :" 
+msgstr "Acerca deste computador :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "System Preferences :"
-msgstr "Preferências do Sistema :" 
+msgstr "Preferências do Sistema :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "App Store :"
-msgstr "Loja de aplicativos :" 
+msgstr "Loja de Aplicações :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Force Quit :"
-msgstr "Forçar Encerramento :" 
+msgstr "Forçar Encerramento :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Sleep :"
-msgstr "Repouso :"
+msgstr "Hibernar :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Restart :"
@@ -97,27 +98,27 @@ msgstr "Reiniciar :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Shut Down :"
-msgstr "Desligar :"
+msgstr "Encerrar :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Lock Screen :"
-msgstr "Bloquear :"
+msgstr "Bloquear Ecrã :"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Log Out :"
-msgstr "Finalizar Sessão :"
+msgstr "Terminar Sessão :"
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Do you need help ?"
-msgstr "Você precisa de ajuda ?"
+msgstr "Precisa de ajuda ?"
 
 #: ../contents/ui/config/configHelp.qml
 msgid "About Kpple"
-msgstr "Sobre o Kpple"
+msgstr "Acerca do Kpple"
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Consult the user's guide"
-msgstr "Consulte o guia do usuário"
+msgstr "Consulte o guia do utilizador"
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Repport a bug"
@@ -125,10 +126,8 @@ msgstr "Reportar um erro"
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Donate for the project"
-msgstr "Doe para o projeto"
+msgstr "Doar para o projecto"
 
 #: ../contents/ui/config/configHelp.qml
 msgid "Couldn't find help ? Contact us at : info.kpple@gmail.com"
-msgstr "Não encontrou ajuda ? Entre em contato conosco no seguinte endereço : info.kpple@gmail.com"
-
- 
+msgstr "Não conseguiu encontrar ajuda? Contacte-nos em : info.kpple@gmail.com"
