--- a/package/translate/pl.po
+++ b/package/translate/pl.po
@@ -9,19 +9,19 @@ msgstr ""
 "Report-Msgid-Bugs-To: https://github.com/kppleos/org.kpple.kppleMenu\n"
 "POT-Creation-Date: 2020-05-19\n"
 "PO-Revision-Date: 2020-05-20\n"
-"Last-Translator: Piotr Komur (pkomur@gmail.com)\n"
-"Language: fr\n"
+"Last-Translator: Dawid Krasnodębski(d.krasnodebski@outlook.com)\n"
+"Language: pl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: ../contents/ui/main.qml
 msgid "About This Computer"
-msgstr "O komputerze" 
+msgstr "O komputerze..." 
 
 #: ../contents/ui/main.qml
 msgid "System Preferences..."
-msgstr "Ustawienia systemowe" 
+msgstr "Preferencje Systemowe..." 
 
 #: ../contents/ui/main.qml
 msgid "App Store..."
@@ -29,7 +29,7 @@ msgstr "App Store"
 
 #: ../contents/ui/main.qml
 msgid "Force Quit..."
-msgstr "Wymuś zamknięcie okna" 
+msgstr "Wymuś wyjście..." 
 
 #: ../contents/ui/main.qml
 msgid "Sleep"
@@ -37,15 +37,15 @@ msgstr "Uśpij"
 
 #: ../contents/ui/main.qml
 msgid "Restart..."
-msgstr "Uruchom ponownie"
+msgstr "Uruchom ponownie..."
 
 #: ../contents/ui/main.qml
 msgid "Shut Down..."
-msgstr "Wyłącz"
+msgstr "Wyłącz..."
 
 #: ../contents/ui/main.qml
 msgid "Lock Screen"
-msgstr "Zablokuj ekran"
+msgstr "Zablokuj"
 
 #: ../contents/ui/main.qml
 msgid "Log Out"
@@ -61,7 +61,7 @@ msgstr "Pomoc"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "Adapt the links with your own command lines"
-msgstr "Zmień ustawienia poleceń"
+msgstr "Zmień ustawienia poleceń na swoje własne"
 
 #: ../contents/ui/config/configGeneral.qml
 msgid "( Warning : This is the expert mode, do not change anything if the application is working properly. )"
