--- a/package/translate/tr.po
+++ b/package/translate/tr.po
@@ -10,7 +10,7 @@ msgstr ""
 "POT-Creation-Date: 2020-05-19\n"
 "PO-Revision-Date: 2021-08-23\n"
 "Last-Translator: Sezer Çevik <sc.sezer.cevik@gmail.com>\n"
-"Language: nl\n"
+"Language: tr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
